--- a/06 - NATURAL-LANGUAGE-PROCESSING/code/pyproject.toml
+++ b/06 - NATURAL-LANGUAGE-PROCESSING/code/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 pandas = "^2.1.4"
 scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
+nltk = "^3.8.1"
+matplotlib = "^3.8.2"
 
 
 [build-system]
